syntax = "proto3";

package product;

option go_package = "/proto";

service ProductService {
    rpc CreateProduct (CreateProductRequest) returns (CreateProductResponse);
    rpc GetProducts (GetProductsRequest) returns (GetProductsResponse);
}

message CreateProductRequest {
    string name = 1;
    string description = 2;
    float price = 3;
}

message CreateProductResponse {
    string id = 1;
}

message GetProductsRequest {}

message GetProductsResponse {
    repeated Product products = 1;
}

message Product {
    string id = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}